--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "binance-cli",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A simple cli that interact with Binance API",
   "bin": {
     "binance-cli": "./bin/binance-cli.js"
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@binance/connector": "^3.1.0",
+    "@binance/futures-connector": "^0.1.0",
     "commander": "^9.0.0"
   },
   "devDependencies": {
