--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "binance-cli",
-  "version": "1.2.2",
-  "description": "A simple cli that interact with Binance API",
+  "version": "2.0.0",
+  "description": "A simple CLI that interact with Binance API",
   "bin": {
     "binance-cli": "./bin/binance-cli.js"
   },
@@ -17,9 +17,10 @@
   "author": "Binance",
   "license": "MIT",
   "dependencies": {
-    "@binance/connector": "^3.4.1",
-    "@binance/futures-connector": "^0.1.4",
-    "commander": "^9.0.0"
+    "@binance/spot": "^22.0.0",
+    "@binance/derivatives-trading-coin-futures": "^8.0.1",
+    "@binance/derivatives-trading-usds-futures": "^14.0.0",
+    "commander": "9.5.0"
   },
   "devDependencies": {
     "standard": "^16.0.4"
